# genpasswd

./: .gitignore  .travis.yml  Changes  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  genpasswd.c
po/: Makefile.am  Makefile.in  default.pot  ko.po
tests/: Makefile.am  Makefile.in  md5.test  sha256.test  sha512.test
tests/travis/: run.sh
